# docper

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/: init.py  main.py  models.py  schemas.py  settings.py
src/models/: document.py  member.py  permission.py  schemas.py
src/pydantic_models/: member.py
src/routers/: author.py  category.py  document.py  member.py  permission.py
src/tests/: conftest.py
src/tests/test_routers/: test_member.py
